--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-js-hw-11-color-switch",
   "version": "1.1.0",
-  "description": "",
+  "description": "https://tarasovdr.github.io/goit-js-hw-11-timer/",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --env.mode development --config ./webpack/config.js",
